# redshiftgui

./: .gitignore  CMakeLists.txt  DoxyCSS.css  FixDebi686.sh  FixDebx86_64.sh  Linux32CMake.sh  Linux64CMake.sh  README.txt  RunCMake.cmd  RunCMake.sh  Win32CMake.cmd  annotated.html  bug.html  classes.html  common_8h.html  configure  configure.cmd  files.html  functions.html  functions_vars.html  gamma_8h.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  index.html  iupgui_8h.html  iupgui__gamma_8h.html  iupgui__location_8h.html  iupgui__main_8h.html  iupgui__settings_8h.html  location_8h.html  options_8h.html  pages.html  randr_8h.html  solar_8h.html  splint.xh  struct_memory_struct.html  structgamma__method__s.html  (+12 more)
CMakeModules/: AddMingwRC.cmake  FindIUP.cmake  FindXLIB.cmake  NSIS.template.in
data/: GenIcons.sh  aur_pack.sh
data/applications/: redshiftgui.desktop
docs/: DoxyHeader.html  Doxyfile.in  Main.dox
msvc/: stdint.h
scripts/: checkgam.m  gammars.csv
src/: Doxyfile  Make.sh  MakeTags.cmd  MakeTags.sh  argparser.c  argparser.h  colorramp.h  common.h  config.h.in  gamma.c  gamma.h  gamma_vals.h  location.c  location.h  logger.c  logger.h  netutils.c  netutils.h  options.c  options.h  redshift.c  redshift.h  redshiftgui.c  solar.c  solar.h  systemtime.c  systemtime.h
src/backends/: randr.c  randr.h  vidmode.c  vidmode.h  w32gdi.c  w32gdi.h
src/gui/: gtkgui.c  gtkgui.h  gui.h  icon-redshift.c  iupgui.c  iupgui.h  iupgui_gamma.c  iupgui_gamma.h  iupgui_location.c  iupgui_location.h  iupgui_main.c  iupgui_main.h  iupgui_settings.c  iupgui_settings.h  win32gui.c  win32gui.h  win32gui_gamma.c  win32gui_gamma.h
src/msvc/: stdint.h
src/resources/: redshift-idle.c  redshift.c  sun.c  sunback.c
src/win32/: Redshiftgui.rc  app.64.manifest  app.64.manifest.in  app.aps  app.manifest  app.manifest.in  app.rc  app.rc.in  resource.h
